# AI-Policy-Simulation

./: .gitignore  CLAUDE.md  IMPLEMENTATION-PLAN.md  README.md  policy-sim-master-reference.md
agentic-bo/: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
agentic-bo/.claude/: README.md
agentic-bo/benchmarks/: README.md  build_workspace.py  core_runs.md  her_scorecard_template.md  llm_judge_pairwise_prompt.md  llm_judge_single_run_prompt.md  llm_judging.md  oer_scorecard_template.md  open_world_reruns.py  run_scorecard_template.md  scoring.md
agentic-bo/benchmarks/prompts/: README.md  hea_live_structural_base_recovery.md  hea_live_structural_naive.md  hea_live_structural_strong.md  her_live_structural_light.md  her_live_structural_naive.md  her_live_structural_strong.md  oer_naive.md  oer_skilled.md
agentic-bo/bo_workflow/: __init__.py  cli.py  engine.py  engine_cli.py  plotting.py  utils.py
agentic-bo/bo_workflow/constraints/: __init__.py  base.py  simplex.py
agentic-bo/bo_workflow/converters/: __init__.py  catalog_index.py  column_transform.py  combined.py  molecule_descriptors.py  reaction_drfp.py
agentic-bo/bo_workflow/evaluation/: __init__.py  __main__.py  cli.py  oracle.py  proxy.py  python_module.py
agentic-bo/bo_workflow/observers/: __init__.py  base.py  (+1 more)
agentic-bo/data/: HEA_alloy_data.csv  OER_catalyst_data.csv  buchwald_hartwig_rxns.csv  egfr_ic50.csv  egfr_seed50_mixed.csv
agentic-bo/tests/: conftest.py  test_benchmarks.py  test_constraints.py  test_drfp_converter.py  test_integration.py  test_molecule_descriptors_converter.py
(+213 files in other folders)
