[project]
name = "bo-fun"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
# HEBO is installed separately with --no-deps; see CLAUDE.md for details.
dependencies = [
    "disjoint-set",
    "gpytorch>=1.15.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pymoo",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "drfp>=0.3.6",
    "rdkit>=2024.3.1",
    "botorch>=0.12.0",
]

[project.optional-dependencies]
dft = ["pyscf>=2.4", "rdkit>=2023.3", "pyscf-properties>=0.1"]
dft-vbur = ["morfeus-ml>=0.7"]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bo_workflow"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.15.0"]

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
